<resources>
    <string name="app_name">Labo2</string>
    <string name="asynchronous_activity_title">Asynchronous Activity</string>
    <string name="compressed_activity_title">Compressed Activity</string>
    <string name="delayed_activity">Delayed Activity</string>
    <string name="object_activity">Object Activity</string>
    <string name="graphql_activity">GraphQL Activity</string>
    <string name="delayed_activity_title">Delayed Activity</string>
    <string name="write_request">Write your text :</string>
    <string name="select_author">Select an author :</string>
    <string name="authors_post">Authors post</string>
    <string name="send">Send</string>
    <string name="objectTitle">Object Activity</string>
    <string name="objectFirstName">First name :</string>
    <string name="objectName">Last name :</string>
    <string name="objectPhoneNumber">Phone :</string>

</resources>
